--- a/pom.xml
+++ b/pom.xml
@@ -84,7 +84,7 @@
             <!-- Default configuration for running with: mvn clean javafx:run -->
             <id>default-cli</id>
             <configuration>
-              <mainClass>com.elcheno.trues/com.elcheno.trues.HelloApplication</mainClass>
+              <mainClass>com.elcheno.trues/com.elcheno.trues.App</mainClass>
               <launcher>app</launcher>
               <jlinkZipName>app</jlinkZipName>
               <jlinkImageName>app</jlinkImageName>
